initial refactoring on security code in synapse commons
git-svn-id: https://svn.apache.org/repos/asf/synapse/trunk@935815 13f79535-47bb-0310-9956-ffa450edef68